# resume_ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 875bc11a3abf_resume_builder.py  d9bf6a0819f2_resume_builder.py
app/: config.py  database.py  exceptions.py  main.py
app/api/: deps.py
app/api/v1/: analysis.py  auth.py  export.py  job_description.py  resumes.py  router.py  templates.py  user.py
app/core/: security.py
app/models/: base.py  job_description.py  resume.py  template.py  user.py
app/schemas/: analysis.py  job_description.py  resume.py  template.py  user.py
app/services/: ai_service.py  analysis_service.py  auth_service.py  email_service.py  export_service.py  file_service.py  job_description_service.py  resume_service.py  template_service.py  user_service.py
app/utils/: ai_prompts.py  file_parser.py
app/workers/: celery_app.py  tasks.py
scripts/: init_db.py
