[project]
name = "ai-resume"
version = "0.1.0"
description = "AI Resume Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.2",
    "anthropic>=0.57.1",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "databases>=0.9.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.14",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "reportlab>=4.4.2",
    "sentry-sdk>=2.32.0",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]
